# AdrianZeoGer-VoiceFlow---AI-Productivity-Assistant

./: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: language-provider.tsx  theme-provider.tsx
src/components/ui/: button.tsx  card.tsx
src/hooks/: useAudioRecorder.ts
src/lib/: translations.ts
src/services/: ai.ts
